--- a/TODO.txt
+++ b/TODO.txt
@@ -1,10 +1,13 @@
 TODO items that should maybe go into the bug tracker
 
-0. Make a README
-1. Track previously valid circuits (or perhaps simpler: previous node choices)
-   so we don't get confused when settings change.
-2. Provide ExcludeNodes compatibility (ie GETCONF and don't pick nodes in it)
-3. Provide an IncludeNodes feature
-4. Make a conf file
-5. Make setup.py, pip requirements, and virtualenv setup scripts
+* Make a README
+* Prototype #23980 by killing circuits after a time period, consensus change,
+  and/or total bytes from CIRC_BW events (as options). Separate read+write
+  options for total bytes.
+* Version the pickled state file
+* Make a conf file
+* Make setup.py, pip requirements, and virtualenv setup scripts
+* Fix logging system
+* Provide ExcludeNodes compatibility (ie GETCONF and don't pick nodes in it)
+* Provide an IncludeNodes feature
 
