--- a/TODO.txt
+++ b/TODO.txt
@@ -2,16 +2,14 @@ TODO items that should maybe go into the bug tracker
 
 * Don't do CIRC_BW checks unless we're 0.3.4+
 * Options to disable bandguards
-* Try to check that other hops in the path match expected consensus weight
-  distribution after we have built something like K*len(consensus) circs,
-  for K=0.5-10, screaming louder about anomalies as K increases.
 * Unit tests, esp for bandguards and path checks
-* Version the pickled state file
 * Make a conf file
 * Fix logging system (esp rate limits)
 * Provide ExcludeNodes compatibility (ie GETCONF and don't pick nodes in it)
 * Provide an IncludeNodes feature
+* Version the pickled state file
 * Make debian packages
+* Write blog post
 * Investigate sharing vanguard state between multiple instances, for
   better use with onionshare.
 * Check each vanguard layer against tor's path restrictions - no one layer
