--- a/TODO.txt
+++ b/TODO.txt
@@ -1,8 +1,8 @@
 TODO items that should maybe go into the bug tracker
 
-* Don't do CIRC_BW checks unless we're 0.3.4+
-* Options to disable bandguards
-* Unit tests, esp for bandguards and path checks
+* Better names for rendwatcher and cbtverify
+* Unit tests for all the things
+* Option for bandguards to apply to all circuits
 * Make a conf file
 * Fix logging system (esp rate limits)
 * Provide ExcludeNodes compatibility (ie GETCONF and don't pick nodes in it)
@@ -12,8 +12,3 @@ TODO items that should maybe go into the bug tracker
 * Write blog post
 * Investigate sharing vanguard state between multiple instances, for
   better use with onionshare.
-* Check each vanguard layer against tor's path restrictions - no one layer
-  should all be same /16, family, etc. If it does, re-pick node until
-  it doesn't. There should be a limit on this before we warn and re-pick the
-  whole layer.
-
