--- a/TODO.txt
+++ b/TODO.txt
@@ -1,8 +1,8 @@
 TODO items that should maybe go into the bug tracker
 
-* Better names for rendwatcher and cbtverify (renduse.py and cbtcheck.py?)
-* Better option names for the same..
 * Make a conf file and test conf file vs params
+* Have cbtverify warn if timeout is high? (50%)
+* Have cbtverify warn if failure due to guard destroy is high? (50%?)
 * Fix logging system (esp rate limits)
 * Provide ExcludeNodes compatibility (ie GETCONF and don't pick nodes in it)
 * Provide an IncludeNodes feature
