--- a/TODO.txt
+++ b/TODO.txt
@@ -1,14 +1,14 @@
 TODO items that should maybe go into the bug tracker
 
 * Make a conf file and test conf file vs params
-* Have cbtverify warn if timeout is high? (50%)
-* Have cbtverify warn if failure due to guard destroy is high? (50%?)
 * Fix logging system (esp rate limits)
 * Provide ExcludeNodes compatibility (ie GETCONF and don't pick nodes in it)
 * Provide an IncludeNodes feature
 * Version the pickled state file
-* Make debian packages
+* Make deb and pip packages
 * Write blog post
+* Have cbtverify warn if timeout is high? (50%)
+* Have cbtverify warn if failure due to guard destroy is high? (50%?)
 * Option for bandguards to apply to all circuits..or just service circs?
 * Investigate sharing vanguard state between multiple instances, for
   better use with onionshare.
