--- a/TODO.txt
+++ b/TODO.txt
@@ -1,11 +1,12 @@
 TODO items that should maybe go into the bug tracker
 
+* Make Test pip package
+* Test with https://github.com/hiromipaw/onionperf-docker
+  * (2-3-8,2-4-8) x (service-only, service+client) 
 * Finish XXX sections of README
-* Make deb and pip packages
-* Write blog post
 * Provide ExcludeNodes compatibility (ie GETCONF and don't pick nodes in it)
-* Provide an IncludeNodes feature
+* Make real deb and pip packages
+* Write blog post
 * Investigate sharing vanguard state between multiple instances, for
   better use with onionshare.
-* Have cbtverify warn if timeout is high? (50%)
-* Have cbtverify warn if failure due to guard destroy is high? (50%?)
+* Provide per-layer Include/Exclude sets (requires Tor patches :/)
